--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "cors": "^2.8.5",
     "react": "^17.0.1",
     "react-async": "^10.0.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
     "react-modal": "^3.12.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
