--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-tabs": "^3.1.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
