--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-async": "^10.0.1",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
+    "react-hook-usemodal": "^1.1.0",
     "react-modal": "^3.12.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
