--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "draft-js": "^0.11.7",
     "react": "^17.0.1",
     "react-async": "^10.0.1",
+    "react-calendar": "^3.3.1",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
+    "react-draft-wysiwyg": "^1.14.5",
     "react-hook-usemodal": "^1.1.0",
     "react-modal": "^3.12.1",
     "react-redux": "^7.2.2",
