--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "react": "^17.0.1",
     "react-async": "^10.0.1",
     "react-calendar": "^3.3.1",
