--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-async": "^10.0.1",
     "react-calendar": "^3.3.1",
     "react-cookie": "^4.0.3",
+    "react-date-picker": "^8.0.7",
     "react-dom": "^17.0.1",
     "react-draft-wysiwyg": "^1.14.5",
     "react-hook-usemodal": "^1.1.0",
