--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "jquery": "^3.5.1",
     "react": "^17.0.1",
     "react-async": "^10.0.1",
     "react-calendar": "^3.3.1",
@@ -25,7 +26,8 @@
     "react-scripts": "4.0.1",
     "react-tabs": "^3.1.2",
     "styled-components": "^5.2.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "webrtc-adapter": "^7.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
