Exam-related publishing

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "cors": "^2.8.5",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "jquery": "^3.5.1",
+    "jquery-ui": "^1.12.1",
+    "jquery-ui-bundle": "^1.12.1-migrate",
     "react": "^17.0.1",
     "react-async": "^10.0.1",
     "react-calendar": "^3.3.1",
