--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-scripts": "4.0.1",
     "react-tabs": "^3.1.2",
     "styled-components": "^5.2.1",
+    "validator-js": "^0.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
