feat::Ace Code editor without compile func

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
+    "ace-builds": "^1.4.12",
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -15,6 +16,7 @@
     "jquery-ui": "^1.12.1",
     "jquery-ui-bundle": "^1.12.1-migrate",
     "react": "^17.0.1",
+    "react-ace": "^9.3.0",
     "react-async": "^10.0.1",
     "react-calendar": "^3.3.1",
     "react-cookie": "^4.0.3",
