--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-tabs": "^3.1.2",
+    "socket.io": "^3.1.1",
     "styled-components": "^5.2.1",
     "validator-js": "^0.2.1",
     "web-vitals": "^0.2.4",
