--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ace-builds": "^1.4.12",
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
+    "clipboard": "^2.0.6",
     "cors": "^2.8.5",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
@@ -19,6 +20,7 @@
     "react-ace": "^9.3.0",
     "react-async": "^10.0.1",
     "react-calendar": "^3.3.1",
+    "react-clipboard.js": "^2.0.16",
     "react-cookie": "^4.0.3",
     "react-date-picker": "^8.0.7",
     "react-dom": "^17.0.1",
