--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-tabs": "^3.1.2",
     "socket.io": "^3.1.1",
     "styled-components": "^5.2.1",
+    "useragent": "^2.3.0",
     "validator-js": "^0.2.1",
     "web-vitals": "^0.2.4",
     "webrtc-adapter": "^7.7.0"
