--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "clipboard": "^2.0.6",
+    "console-feed": "^3.2.2",
     "cors": "^2.8.5",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
