--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jquery": "^3.5.1",
     "jquery-ui": "^1.12.1",
     "jquery-ui-bundle": "^1.12.1-migrate",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-accessible-accordion": "^3.3.4",
     "react-ace": "^9.3.0",
@@ -33,6 +34,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-tabs": "^3.1.2",
+    "react-use": "^17.1.1",
     "socket.io": "^3.1.1",
     "socket.io-client": "^3.1.1",
     "styled-components": "^5.2.1",
