--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jquery-ui": "^1.12.1",
     "jquery-ui-bundle": "^1.12.1-migrate",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "react": "^17.0.1",
     "react-accessible-accordion": "^3.3.4",
     "react-ace": "^9.3.0",
@@ -31,6 +32,7 @@
     "react-draft-wysiwyg": "^1.14.5",
     "react-hook-usemodal": "^1.1.0",
     "react-modal": "^3.12.1",
+    "react-moment": "^1.1.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
